[gd_scene load_steps=17 format=3 uid="uid://d05ojgxmduaa8"]

[ext_resource type="Script" path="res://scripts/chicken.gd" id="1_af6pf"]
[ext_resource type="Texture2D" uid="uid://1cm54ab41bdo" path="res://assets/gamesprites/player/chicken.png" id="2_es6ny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxtfm"]
size = Vector2(201.5, 156.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmcyh"]
atlas = ExtResource("2_es6ny")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rufm"]
atlas = ExtResource("2_es6ny")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh4c3"]
atlas = ExtResource("2_es6ny")
region = Rect2(0, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_emmax"]
atlas = ExtResource("2_es6ny")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeh6s"]
atlas = ExtResource("2_es6ny")
region = Rect2(64, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e805g"]
atlas = ExtResource("2_es6ny")
region = Rect2(96, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e173j"]
atlas = ExtResource("2_es6ny")
region = Rect2(128, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1gnq"]
atlas = ExtResource("2_es6ny")
region = Rect2(192, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q72hx"]
atlas = ExtResource("2_es6ny")
region = Rect2(160, 48, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wqkp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmcyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rufm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh4c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emmax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeh6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e805g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e173j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1gnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q72hx")
}],
"loop": true,
"name": &"all",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmcyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rufm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh4c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emmax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeh6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e805g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e173j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e805g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeh6s")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhkg2"]
size = Vector2(207, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqa2l"]
size = Vector2(19.5, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idtf4"]
size = Vector2(19.5, 150)

[node name="Chicken" type="CharacterBody2D"]
position = Vector2(280, 1582)
collision_mask = 4
motion_mode = 1
script = ExtResource("1_af6pf")
SPEED = 400.0

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(175.25, 78.75)
shape = SubResource("RectangleShape2D_wxtfm")

[node name="ChickenSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(159, 79)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_7wqkp")
animation = &"running"
autoplay = "running"
offset = Vector2(2.85, 0)
flip_h = true

[node name="WallDetector" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2(175.5, 74)
shape = SubResource("RectangleShape2D_fhkg2")
debug_color = Color(0.732743, 0.447599, 0.40903, 0.42)

[node name="RightDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDetector"]
position = Vector2(273.25, 77)
shape = SubResource("RectangleShape2D_oqa2l")
debug_color = Color(0.385756, 0.602147, 0.320482, 0.42)

[node name="LeftDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDetector"]
position = Vector2(103, 77)
shape = SubResource("RectangleShape2D_idtf4")
debug_color = Color(0.385756, 0.602147, 0.320482, 0.42)

[connection signal="body_entered" from="WallDetector" to="." method="_on_wall_detector_body_entered"]
